@startuml database_er_diagram
'*****************************************************
' AIChat2025 - Database ER Diagram
' Purpose: Show relational database schema
' Chapter: Chapter 4 - Design & Implementation
'*****************************************************

!define table(x) entity x << (T,#FFAAAA) >>
!define pk(x) <u>x</u>
!define fk(x) <i>x</i>

title Database Schema - SQL Server 2022

' Entities
table(Tenants) {
  pk(Id) : INT <<PK>>
  --
  Name : NVARCHAR(255) <<NOT NULL>>
  IsActive : BIT <<DEFAULT 1>>
  CreatedAt : DATETIME2 <<NOT NULL>>
  UpdatedAt : DATETIME2
}

table(Accounts) {
  pk(Id) : INT <<PK>>
  --
  fk(TenantId) : INT <<FK, NOT NULL>>
  Email : NVARCHAR(255) <<NOT NULL>>
  PasswordHash : NVARCHAR(500) <<NOT NULL>>
  FullName : NVARCHAR(255)
  Role : NVARCHAR(50) <<DEFAULT 'user'>>
  IsActive : BIT <<DEFAULT 1>>
  CreatedAt : DATETIME2 <<NOT NULL>>
  UpdatedAt : DATETIME2
  --
  UK: (TenantId, Email)
}

table(Permissions) {
  pk(Id) : INT <<PK>>
  --
  fk(TenantId) : INT <<FK, NOT NULL>>
  fk(UserId) : INT <<FK, NOT NULL>>
  PermissionName : NVARCHAR(255) <<NOT NULL>>
  CreatedAt : DATETIME2 <<NOT NULL>>
}

table(ChatConversations) {
  pk(Id) : INT <<PK>>
  --
  fk(TenantId) : INT <<FK, NOT NULL>>
  fk(UserId) : INT <<FK, NOT NULL>>
  Title : NVARCHAR(500)
  CreatedAt : DATETIME2 <<NOT NULL>>
  UpdatedAt : DATETIME2
  --
  IX: (TenantId, UserId, CreatedAt DESC)
}

table(ChatMessages) {
  pk(Id) : INT <<PK>>
  --
  fk(ConversationId) : INT <<FK, NOT NULL>>
  IsBot : BIT <<NOT NULL>>
  Content : NVARCHAR(MAX) <<NOT NULL>>
  CreatedAt : DATETIME2 <<NOT NULL>>
  --
  IX: (ConversationId, CreatedAt ASC)
}

table(PromptDocuments) {
  pk(Id) : INT <<PK>>
  --
  fk(TenantId) : INT <<FK, NOT NULL>>
  DocumentName : NVARCHAR(500) <<NOT NULL>>
  FileName : NVARCHAR(500) <<NOT NULL>>
  Status : NVARCHAR(50) <<NOT NULL>>
  IsCompanyRule : BIT <<DEFAULT 0>>
  CreatedAt : DATETIME2 <<NOT NULL>>
  UpdatedAt : DATETIME2
  --
  IX: (TenantId, Status)
  Status: 'Pending', 'Processing', 'Completed', 'Failed'
}

table(PromptConfigs) {
  pk(Id) : INT <<PK>>
  --
  fk(TenantId) : INT <<FK, NOT NULL>>
  Name : NVARCHAR(255) <<NOT NULL>>
  SystemPrompt : NVARCHAR(MAX)
  CreatedAt : DATETIME2 <<NOT NULL>>
  UpdatedAt : DATETIME2
}

' Hangfire tables (simplified)
table(HangfireJob) {
  pk(Id) : BIGINT <<PK>>
  --
  StateName : NVARCHAR(20)
  InvocationData : NVARCHAR(MAX)
  Arguments : NVARCHAR(MAX)
  CreatedAt : DATETIME
  ExpireAt : DATETIME
  --
  Note: Hangfire auto-creates this
}

' Relationships
Tenants ||--o{ Accounts : "has many"
Tenants ||--o{ ChatConversations : "has many"
Tenants ||--o{ PromptDocuments : "has many"
Tenants ||--o{ PromptConfigs : "has many"
Tenants ||--o{ Permissions : "has many"

Accounts ||--o{ ChatConversations : "creates"
Accounts ||--o{ Permissions : "has many"

ChatConversations ||--o{ ChatMessages : "contains"

note right of Tenants
  **Tenant #1 = Legal Base (shared)**
  - Name: "Legal Base"
  - IsActive: true
  - Documents uploaded here are
    accessible by all tenants
    (read-only)

  **Other Tenants = Companies**
  - Each company has isolated data
  - Row-level security via TenantId
end note

note right of Accounts
  **Password Storage:**
  - BCrypt hash (work factor 12)
  - Never store plain password

  **Role:**
  - 'admin': Can upload documents
  - 'user': Can only chat

  **Multi-tenant:**
  - Email unique within tenant
  - Email can repeat across tenants
    (user@companyA.com and user@companyB.com)
end note

note right of PromptDocuments
  **Status Lifecycle:**
  1. Pending: After upload
  2. Processing: Hangfire job running
  3. Completed: Vectors in Qdrant
  4. Failed: Error occurred

  **IsCompanyRule:**
  - true: Company-specific rules
    (TenantId = specific company)
  - false: Legal documents
    (TenantId = 1, shared)
end note

note right of ChatMessages
  **IsBot:**
  - true: Message from AI
  - false: Message from user

  **Content:**
  - User messages: Plain text query
  - Bot messages: AI-generated response
    with citations
end note

note as N1
  **Indexes for Performance:**
  - Accounts: (TenantId, Email) UNIQUE
  - ChatConversations: (TenantId, UserId, CreatedAt DESC)
  - ChatMessages: (ConversationId, CreatedAt ASC)
  - PromptDocuments: (TenantId, Status)

  **Audit Fields (BaseEntity):**
  - All tables have CreatedAt (auto-set by interceptor)
  - All tables have UpdatedAt (auto-updated by interceptor)
  - All tables have TenantId (auto-set by UpdateTenancyInterceptor)

  **EF Core Interceptors:**
  1. UpdateTenancyInterceptor: Auto-add TenantId on INSERT
  2. UpdateAuditableInterceptor: Auto-set CreatedAt/UpdatedAt
end note

@enduml
